fix user account bugs

--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -56,6 +56,8 @@ a {
     .sidebar {
         display: block;
         padding: 20px;
+        margin-left: -15px;
+        margin-right: -16px;
         height: 100%;
         min-height: 100%;
         overflow-x: hidden;
@@ -66,7 +68,7 @@ a {
     }
 
     /* Sidebar navigation */
-    .nav-sidebar, .nav-plus {
+    .nav-sidebar {
         margin-right: -21px;
         margin-left: -20px;
         border-top: 1px solid #ddd;
@@ -124,6 +126,8 @@ a {
         text-align: right;
         color: #767676;
         line-height: 30px;
+        margin-left: -15px;
+        margin-right: -16px;
     }
 
     .nav-plus span {
@@ -155,25 +159,28 @@ a {
 #page .list table a:focus {
     color: #d9534f;
 }
-#page .list table>tbody>tr>td:last-child{
-    width:81px;
+
+#page .list table > tbody > tr > td:last-child {
+    width: 81px;
 }
+
 #page .list table .dropdown-menu {
     right: 0;
     left: inherit;
 }
+
 #page .list table .dropdown-menu a:hover,
-#page .list table .dropdown-menu a:focus
-{
-    color:#000000;
+#page .list table .dropdown-menu a:focus {
+    color: #000000;
 }
 
 #page .list table a {
     outline: none;
     text-decoration: none;
 }
-#page .list table td>a {
-    margin-left:10px;
+
+#page .list table td > a {
+    margin-left: 10px;
 }
 
 #footer a {
