--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -234,8 +234,17 @@ a {
 
 #footer .audio-body .media-left,
 #footer .audio-body .media-body {
-    vertical-align: middle;
+    display:block;
     height: 60px;
+}
+#footer .audio-body .media-left{
+    position: absolute;
+    top: 6px;
+}
+#footer .audio-body .media-body{
+   width: 100%;
+  padding-left: 60px;
+  position: relative;
 }
 
 #footer .audio-body .media-left a {
@@ -253,11 +262,21 @@ a {
 }
 
 #footer .audio-body .media-body .media-heading {
-    float: left;
+      margin-top: 10px;
+  margin-bottom: 5px;
+  white-space: nowrap;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  padding-right: 76px;
 }
 
 #footer .audio-body .media-body .media-time {
-    float: right;
+     display: block;
+  position: absolute;
+  right: 0;
+  top: 10px;
 }
 
 input[type="range"] {
