--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -25,6 +25,28 @@ a {
     outline: none;
 }
 
+#user-profile {
+    line-height: 50px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+#user-profile img {
+    height: 30px;
+    width: 30px;
+    margin-right: 10px;
+    background: url('../img/avater.jpg') no-repeat;
+    background-size: cover;
+}
+#user-profile p{
+    margin: 0;
+    display: inline-block;
+}
+
+#menugo-0 span,#menugo-1 span {
+    margin-right: 10px;
+}
+
 ul.win-control > li > a {
     padding-left: 10px;
     padding-right: 10px;
@@ -207,12 +229,12 @@ div#main {
     -webkit-animation: loading 1500ms infinite linear;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 840px) {
     .list {
         padding-left: 0 !important;
     }
 
-    #sidebar {
+    #open-side, #sidebar {
         display: none;
     }
 }
@@ -226,6 +248,7 @@ div#main {
     border-radius: 2px;
     background-color: #9d9d9d;
 }
+
 .list::-webkit-scrollbar-thumb:hover {
     background-color: #767676;
 }
@@ -305,8 +328,8 @@ div#main {
     min-width: 138px;
 }
 
-#footer .audio-body {
-
+#footer .audio-control #open-side {
+    margin-right: 10px;
 }
 
 #footer .audio-adjust a {
