--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -285,8 +285,8 @@ div#main {
     white-space: nowrap;
 }
 
-#page .list table > tbody > tr > td:last-child {
-    width: 81px;
+#page .list table td:last-child {
+    white-space: nowrap;
 }
 
 #page .list table .dropdown-menu {
@@ -337,8 +337,49 @@ div#main {
     margin-right: 5px;
 }
 
-#vol-pop {
-    z-index: 1501;
+a#vol-wrapper {
+    position: relative;
+    overflow: visible;
+}
+
+a#vol-wrapper:hover #vol-panel {
+    display: block;
+}
+
+#vol-panel {
+    bottom: 40px;
+    top: inherit;
+    left: -70px;
+    width: 150px;
+}
+
+#vol-panel > .layer {
+    position: absolute;
+    bottom: -11px;
+    width: 100%;
+    height: 11px;
+}
+
+#vol-panel .slider {
+    width: 100%;
+}
+
+#vol-panel .slider-track {
+    border-radius: 4px;
+    background: #E7E7E7;
+}
+
+#vol-panel .slider-selection {
+    display: none;
+}
+
+#vol-panel .slider-handle {
+    height: 12px;
+    width: 12px;
+    margin-left: -5px;
+    margin-top: -1px;
+    border-radius: 100%;
+    background: #5e5e5e;
 }
 
 #footer .audio-body {
