--- a/src/my.styl
+++ b/src/my.styl
@@ -33,198 +33,215 @@ a
 #page
   padding-top 50px
   padding-bottom 60px
-  #main
-    position relative
-    #sidebar
-      display block
-      position absolute
-      top 0
-      right 75%
-      width 25%
-      border-right 1px solid #eee
-      padding 0
-      overflow hidden
-      background-color #f8f8f8
-      #entry
-        padding 0 9px 30px 10px
-        overflow-y auto
-        &::-webkit-scrollbar
-          width: 2px
-        &::-webkit-scrollbar-track
-          margin-bottom: 30px
-        &::-webkit-scrollbar-track-piece
-          background-color #f8f8f8
-        &::-webkit-scrollbar-thumb
-          background-color #999
-          border-radius 4px
-          &:hover
-            background-color #767676
-        .plts-group
-          margin-top 20px
-          .plts-title
+
+#main
+  position relative
+  #sidebar
+    display block
+    position absolute
+    top 0
+    right 75%
+    width 25%
+    border-right 1px solid #eee
+    padding 0
+    overflow hidden
+    background-color #f8f8f8
+    #entry
+      padding 0 9px 30px 10px
+      overflow-y auto
+      &::-webkit-scrollbar
+        width: 2px
+      &::-webkit-scrollbar-track
+        margin-bottom: 30px
+      &::-webkit-scrollbar-track-piece
+        background-color #f8f8f8
+      &::-webkit-scrollbar-thumb
+        background-color #999
+        border-radius 4px
+        &:hover
+          background-color #767676
+      .plts-group
+        margin-top 20px
+        .plts-title
+          font-size 13px
+          color #A5A3A3
+          padding-bottom 5px
+          padding-left 15px
+        li
+          border-radius 3px
+          a
+            position: relative
             font-size 13px
-            color #A5A3A3
-            padding-bottom 5px
-            padding-left 15px
-          li
+            line-height 13px
+            padding 8px 16px
             border-radius 3px
-            a
-              position: relative
-              font-size 13px
-              line-height 13px
-              padding 8px 16px
-              border-radius 3px
-              .name
-                margin-right 62px
-                white-space nowrap
-                overflow hidden
-                text-overflow ellipsis
-              .limark
-                position absolute
-                right 5px
-                top 6px
-              span
-                float right
-                margin-left 5px
-                margin-right 5px
-              span.badge
-                padding 2px 7px
-                background-color: #767676
-                color: #fff
-              &:hover, &:focus
-                color #767676
-            &.active > a, &.active > a:focus, &.active > a:hover
-              color #fff
-              background-color: #428bca
-            &.active > a span.badge
-              background-color #fff
-              color #428bca
+            .name
+              margin-right 62px
+              white-space nowrap
+              overflow hidden
+              text-overflow ellipsis
+            .limark
+              position absolute
+              right 5px
+              top 6px
+            span
+              float right
+              margin-left 5px
+              margin-right 5px
+            span.badge
+              padding 2px 7px
+              background-color: #767676
+              color: #fff
+            &:hover, &:focus
+              color #767676
+          &.active > a, &.active > a:focus, &.active > a:hover
+            color #fff
+            background-color: #428bca
+          &.active > a span.badge
+            background-color #fff
+            color #428bca
 
-      #plts-tools
-        position absolute
-        bottom 0
-        width 100%
-        z-index 1000
-        padding-left 15px
-        padding-right 16px
-        color #767676
-        text-align right
-        line-height 30px
-        background-color #eee
-        span
-          margin-left 5px
-          margin-right 5px
-
-    .list
-      overflow auto
+    #plts-tools
+      position absolute
+      bottom 0
       width 100%
-      padding-left 25%
-      .twrap
-        padding 0 15px
-        .song-detail
-          position absolute
-          z-index 1000
-          padding 30px 15px
-          left 0
-          bottom 0
-          overflow auto
-          width 100%
-          background-color #f4f4f4
-          transition transform 0.2s
-          transform scale(0, 0)
-          transform-origin 20% 100%
-          .detail
-            position absolute
-            z-index 1
-            padding 0 10px
-            width 260px
-            margin-left 32px
-            .cover
-              position relative
-              &:after
-              &:before
-                content ""
-                position absolute
-                z-index -1
-                bottom 15px
-                left 10px
-                width 50%
-                height 20%
-                box-shadow 0 15px 10px rgba(125, 125, 125, 0.8)
-                transform rotate(-3deg)
-              &:after
-                right 10px
-                left auto
-                transform rotate(3deg)
-              img
-                width 240px
-                height 240px
-            ul.info
-              margin-top 20px
-              padding-left 0
-              li
-                list-style none
-                line-height 25px
-                span.glyphicon
-                  margin-right 10px
+      z-index 1000
+      padding-left 15px
+      padding-right 16px
+      color #767676
+      text-align right
+      line-height 30px
+      background-color #eee
+      span
+        margin-left 5px
+        margin-right 5px
 
-          .lyric
+  .list
+    overflow auto
+    width 100%
+    padding-left 25%
+    .twrap
+      padding 0 15px
+      .song-detail
+        position absolute
+        z-index 1000
+        padding 30px 15px
+        left 0
+        bottom 0
+        overflow auto
+        width 100%
+        background-color #f4f4f4
+        transition transform 0.2s
+        transform scale(0, 0)
+        transform-origin 20% 100%
+        .detail
+          position absolute
+          z-index 1
+          padding 0 10px
+          width 260px
+          margin-left 32px
+          .cover
             position relative
-            min-height 350px
+            &:after
+            &:before
+              content ""
+              position absolute
+              z-index -1
+              bottom 15px
+              left 10px
+              width 50%
+              height 20%
+              box-shadow 0 15px 10px rgba(125, 125, 125, 0.8)
+              transform rotate(-3deg)
+            &:after
+              right 10px
+              left auto
+              transform rotate(3deg)
+            img
+              width 240px
+              height 240px
+          ul.info
+            margin-top 20px
+            padding-left 0
+            li
+              list-style none
+              line-height 25px
+              span.glyphicon
+                margin-right 10px
+
+        .lyric
+          position relative
+          min-height 350px
+          overflow hidden
+          &, &:before, &:after
             width 100%
             padding-left 360px
             padding-right 100px
-            overflow hidden
-            ul
-              position relative
-              line-height 20px
-              font-size 15px
-              text-align center
-              padding-left 0
-              transition all 1s ease-in-out
-              &::-webkit-scrollbar
-                display none
-              li
-                list-style none
-                min-height 20px
-                color #808080
-                margin 8px auto
-                transition all 0.5s ease-in-out
-                &.current
-                  color #000
-                  font-size 18px
-
-          .lrc-tools
+          &:before, &:after
+            content ""
             position absolute
-            right 70px
-            top 100px
-            border-radius 4px
-            box-shadow rgba(159, 159, 159, 0.5) 0px 0px 12px
-            .btn
-              background-color #fff
-              &:active
-              &:hover
-                box-shadow inset 0 0 5px rgba(0, 0, 0, .125)
+            top 0
+            left 0
+            z-index 1
+            height 30px
+            background linear-gradient(to bottom, #f4f4f4, rgba(255, 255, 255, 0.22))
+            background-clip content-box
+          &:after
+            bottom 0
+            top auto
+            background linear-gradient(to top, #f4f4f4, rgba(255, 255, 255, 0.22))
+          ul
+            position relative
+            line-height 20px
+            font-size 15px
+            text-align center
+            padding-left 0
+            transition all 1s ease-in-out
+            &::-webkit-scrollbar
+              display none
+            li
+              list-style none
+              min-height 20px
+              color #808080
+              margin 8px auto
+              transition all 0.5s ease-in-out
+              &.current
+                color #000
+                font-size 18px
 
-      table
-        a
-          outline none
-          text-decoration none
-          &:hover, &:focus
-            color #d9534f
-        td > a
-          margin-left 10px
-        thead, td:last-child
-          white-space nowrap
-        .dropdown-menu
-          right 0
-          left inherit
-          a:hover, a:focus
-            color #333
+        .lrc-tools
+          position absolute
+          right 70px
+          top 100px
+          border-radius 4px
+          box-shadow rgba(159, 159, 159, 0.5) 0 0 12px
+          .btn
+            background-color #fff
+            &:active
+            &:hover
+              box-shadow inset 0 0 5px rgba(0, 0, 0, .125)
 
-#settings .panel
-  margin 50px auto 0 auto
-  width 80%
+    table
+      a
+        outline none
+        text-decoration none
+        &:hover, &:focus
+          color #d9534f
+      td > a
+        margin-left 10px
+      thead, td:last-child
+        white-space nowrap
+      .dropdown-menu
+        right 0
+        left inherit
+        a:hover, a:focus
+          color #333
+
+#settings
+  overflow auto
+  .panel
+    margin 50px auto
+    width 80%
 
 #footer
   position fixed
@@ -244,7 +261,7 @@ a
       color #bdbdbd
   .audio-control, .audio-adjust
     line-height 60px
-    font-size 30px
+    font-size 25px
     color #fff
     text-align center
     min-width 138px
