fix bugs on lyric ui

--- a/src/my.styl
+++ b/src/my.styl
@@ -184,12 +184,11 @@ a
             left 0
             z-index 1
             height 30px
-            background linear-gradient(to bottom, #f4f4f4, rgba(255, 255, 255, 0.22))
-            background-clip content-box
+            background linear-gradient(to bottom, #f4f4f4, rgba(255, 255, 255, 0.22)) content-box
           &:after
             bottom 0
             top auto
-            background linear-gradient(to top, #f4f4f4, rgba(255, 255, 255, 0.22))
+            background linear-gradient(to top, #f4f4f4, rgba(255, 255, 255, 0.22)) content-box
           ul
             position relative
             line-height 20px
