--- a/src/my.styl
+++ b/src/my.styl
@@ -122,104 +122,6 @@ a
     padding-left 25%
     .twrap
       padding 0 15px
-      .song-detail
-        position absolute
-        z-index 1000
-        padding 30px 15px
-        left 0
-        bottom 0
-        overflow auto
-        width 100%
-        background-color #f4f4f4
-        transition transform 0.2s
-        transform scale(0, 0)
-        transform-origin 20% 100%
-        .detail
-          position absolute
-          z-index 1
-          padding 0 10px
-          width 260px
-          margin-left 32px
-          .cover
-            position relative
-            &:after
-            &:before
-              content ""
-              position absolute
-              z-index -1
-              bottom 15px
-              left 10px
-              width 50%
-              height 20%
-              box-shadow 0 15px 10px rgba(125, 125, 125, 0.8)
-              transform rotate(-3deg)
-            &:after
-              right 10px
-              left auto
-              transform rotate(3deg)
-            img
-              width 240px
-              height 240px
-          ul.info
-            margin-top 20px
-            padding-left 0
-            li
-              list-style none
-              line-height 25px
-              span.glyphicon
-                margin-right 10px
-
-        .lyric
-          position relative
-          min-height 350px
-          overflow hidden
-          &, &:before, &:after
-            width 100%
-            padding-left 360px
-            padding-right 100px
-          &:before, &:after
-            content ""
-            position absolute
-            top 0
-            left 0
-            z-index 1
-            height 30px
-            background linear-gradient(to bottom, #f4f4f4, rgba(255, 255, 255, 0.22)) content-box
-          &:after
-            bottom 0
-            top auto
-            background linear-gradient(to top, #f4f4f4, rgba(255, 255, 255, 0.22)) content-box
-          ul
-            position relative
-            line-height 20px
-            font-size 15px
-            text-align center
-            padding-left 0
-            transition all 1s ease-in-out
-            &::-webkit-scrollbar
-              display none
-            li
-              list-style none
-              min-height 20px
-              color #808080
-              margin 8px auto
-              transition all 0.5s ease-in-out
-              &.current
-                color #000
-                font-size 18px
-
-        .lrc-tools
-          position absolute
-          right 70px
-          top 100px
-          border-radius 4px
-          box-shadow rgba(159, 159, 159, 0.5) 0 0 12px
-          .btn
-            background-color #fff
-            &:active
-            &:hover
-              box-shadow inset 0 0 5px rgba(0, 0, 0, .125)
-
     table
       a
         outline none
@@ -235,6 +137,104 @@ a
         left inherit
         a:hover, a:focus
           color #333
+
+.song-detail
+  position absolute
+  z-index 1000
+  padding 80px 15px
+  left 0
+  bottom 0
+  overflow auto
+  width 100%
+  background-color #f4f4f4
+  transition transform 0.2s
+  transform scale(0, 0)
+  transform-origin 20% 100%
+  .detail
+    position absolute
+    z-index 1
+    padding 0 10px
+    width 260px
+    margin-left 32px
+    .cover
+      position relative
+      &:after
+      &:before
+        content ""
+        position absolute
+        z-index -1
+        bottom 15px
+        left 10px
+        width 50%
+        height 20%
+        box-shadow 0 15px 10px rgba(125, 125, 125, 0.8)
+        transform rotate(-3deg)
+      &:after
+        right 10px
+        left auto
+        transform rotate(3deg)
+      img
+        width 240px
+        height 240px
+    ul.info
+      margin-top 20px
+      padding-left 0
+      li
+        list-style none
+        line-height 25px
+        span.glyphicon
+          margin-right 10px
+
+  .lyric
+    position relative
+    min-height 350px
+    overflow hidden
+    &, &:before, &:after
+      width 100%
+      padding-left 360px
+      padding-right 100px
+    &:before, &:after
+      content ""
+      position absolute
+      top 0
+      left 0
+      z-index 1
+      height 40px
+      background linear-gradient(to bottom, #f4f4f4, transparent) content-box
+    &:after
+      bottom 0
+      top auto
+      background linear-gradient(to top, #f4f4f4, transparent) content-box
+    ul
+      position relative
+      line-height 20px
+      font-size 15px
+      text-align center
+      padding-left 0
+      transition all 1s ease-in-out
+      &::-webkit-scrollbar
+        display none
+      li
+        list-style none
+        min-height 20px
+        color #808080
+        margin 8px auto
+        transition all 0.5s ease-in-out
+        &.current
+          color #000
+          font-size 18px
+
+  .lrc-tools
+    position absolute
+    right 70px
+    top 100px
+    border-radius 4px
+    box-shadow rgba(159, 159, 159, 0.5) 0 0 12px
+    .btn
+      background-color #fff
+      &:active
+      &:hover
+        box-shadow inset 0 0 5px rgba(0, 0, 0, .125)
 
 #settings
   overflow auto
